crates/connectors/ndc-postgres/tests/snapshots/query_tests__sorting__select_order_by_artist_name.snap
---
source: crates/connectors/ndc-postgres/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Name": "Worlds"
      },
      {
        "Name": "The World of Classical Favourites"
      },
      {
        "Name": "Sir Neville Marriner: A Celebration"
      },
      {
        "Name": "Fauré: Requiem, Ravel: Pavane & Others"
      },
      {
        "Name": "Bach: Orchestral Suites Nos. 1 - 4"
      }
    ]
  }
]
