crates/connectors/ndc-postgres/tests/snapshots/query_tests__sorting__sorting_by_nested_relationship_column_with_predicate_exists.snap
---
source: crates/connectors/ndc-postgres/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Name": "Balls to the Wall"
      },
      {
        "Name": "Fast As a Shark"
      },
      {
        "Name": "Princess of the Dawn"
      },
      {
        "Name": "Restless and Wild"
      },
      {
        "Name": "\"40\""
      }
    ]
  }
]
